--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -15,7 +15,8 @@
 	"nav nav nav nav nav nav"
 	"sec1 sec1 sec1 sec1 sec1img sec1img"
 	"sec2img sec2img sec2 sec2 sec2 sec2"
-	"sec3 sec3 sec3 sec3 sec3 sec3"
+	"sec3 sec3 sec3 sec3 sec3img sec3img"
+	"sec4img sec4img sec4 sec4 sec4 sec4"
 	"foot foot foot foot foot foot";
 
 }
@@ -51,6 +52,48 @@
 		}//li
 	}//ul
 }//.nav
+.body{
+}
+.sec1{
+	grid-area: sec1;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec1img{
+	grid-area: sec1img;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec2{
+	grid-area: sec2;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec2img{
+	grid-area: sec2img;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec3{
+	grid-area: sec3;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec3img{
+	grid-area: sec3img;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec4{
+	grid-area: sec4;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+.sec4img{
+	grid-area: sec4img;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
 .footer{
 	margin-top: 30px;
 }
